[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/gameplayUi/playerGameInfo/gameplayControls.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/info_box.png" type="Texture" id=2]
[ext_resource path="res://classes/PlayerGameInfo.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/gameplayUi/playerGameInfo/rotateRight.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/gameplayUi/playerGameInfo/hardDrop.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/gameplayUi/playerGameInfo/softDrop.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/gameplayUi/playerGameInfo/rotateLeft.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/gameplayUi/playerGameInfo/right.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/gameplayUi/playerGameInfo/left.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/gameplayUi/playerGameInfo/hold.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/onlineFont.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/fonts/SmolGHC.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=1]
extra_spacing_top = -2
font_data = ExtResource( 12 )

[node name="PlayerGameInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -465.0
margin_bottom = -268.0
rect_min_size = Vector2( 162, 80 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
unpressedColour = Color( 0.341176, 0.0823529, 0.176471, 1 )

[node name="Bg" type="NinePatchRect" parent="."]
modulate = Color( 0.152941, 0.054902, 0.0901961, 1 )
margin_right = 162.0
margin_bottom = 78.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 20, 20 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 7
patch_margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgKeys" type="TextureRect" parent="."]
modulate = Color( 0.341176, 0.0823529, 0.176471, 1 )
margin_left = 19.0
margin_top = 13.0
margin_right = 99.0
margin_bottom = 64.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="TextureRect" parent="."]
modulate = Color( 0.253906, 0.066452, 0.134617, 1 )
margin_left = 18.0
margin_top = 12.0
margin_right = 98.0
margin_bottom = 63.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 13.0
margin_top = -3.0
margin_right = 70.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 2 )
text = "Player 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hardDrop" type="TextureRect" parent="Icons"]
margin_left = 45.0
margin_top = 13.0
margin_right = 52.0
margin_bottom = 23.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="softDrop" type="TextureRect" parent="Icons"]
margin_left = 45.0
margin_top = 56.0
margin_right = 52.0
margin_bottom = 62.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TextureRect" parent="Icons"]
margin_left = 21.0
margin_top = 42.578
margin_right = 25.0
margin_bottom = 49.578
texture = ExtResource( 9 )

[node name="right" type="TextureRect" parent="Icons"]
margin_left = 72.0
margin_top = 42.578
margin_right = 76.0
margin_bottom = 49.578
texture = ExtResource( 8 )

[node name="rotateLeft" type="TextureRect" parent="Icons"]
margin_left = 9.0
margin_top = 18.578
margin_right = 16.0
margin_bottom = 27.578
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rotateRight" type="TextureRect" parent="Icons"]
margin_left = 81.0
margin_top = 18.578
margin_right = 88.0
margin_bottom = 27.578
texture = ExtResource( 4 )

[node name="hold" type="TextureRect" parent="Icons"]
margin_left = 115.0
margin_top = 24.0
margin_right = 145.0
margin_bottom = 33.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rotateLeft" type="CenterContainer" parent="."]
margin_left = 20.0
margin_top = 18.0
margin_right = 29.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="rotateLeft"]
margin_right = 8.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Q"
uppercase = true

[node name="rotateRight" type="CenterContainer" parent="."]
margin_left = 68.0
margin_top = 18.0
margin_right = 77.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="rotateRight"]
margin_left = 1.0
margin_right = 7.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "E"
uppercase = true

[node name="right" type="CenterContainer" parent="."]
margin_left = 59.0
margin_top = 41.0
margin_right = 68.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="right"]
margin_left = 1.0
margin_right = 8.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "D"
uppercase = true

[node name="left" type="CenterContainer" parent="."]
margin_left = 29.0
margin_top = 41.0
margin_right = 38.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="left"]
margin_left = 1.0
margin_right = 8.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "A"
uppercase = true

[node name="softDrop" type="CenterContainer" parent="."]
margin_left = 44.0
margin_top = 41.0
margin_right = 53.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="softDrop"]
margin_left = 1.0
margin_right = 7.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "S"
uppercase = true

[node name="hardDrop" type="CenterContainer" parent="."]
margin_left = 44.0
margin_top = 26.0
margin_right = 53.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="hardDrop"]
margin_right = 9.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "W"
uppercase = true

[node name="hold" type="CenterContainer" parent="."]
margin_left = 87.0
margin_top = 41.0
margin_right = 96.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="hold"]
margin_left = 1.0
margin_right = 8.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "X"
uppercase = true

[node name="HoldBoardCont" type="Control" parent="."]
margin_left = 110.0
margin_top = 37.0
margin_right = 152.0
margin_bottom = 59.0
rect_min_size = Vector2( 42, 22 )
__meta__ = {
"_edit_use_anchors_": false
}
